--- a/lesson 4/styles.css
+++ b/lesson 4/styles.css
@@ -8,14 +8,16 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.185);
     display: flex;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .menu1 {
      width: 50%;
      height: 39px;
      display: flex;
-     flex-direction: row;
      justify-content: space-around;
+     font-weight: 900;
+     font-size: 8pt;
 }
 
 
@@ -23,8 +25,9 @@ body {
      width: 70%;
      height: 39px;
      display: flex;
-     flex-direction: row;
      justify-content: space-around;
+     font-weight: bold;
+     font-size: 10pt;
 }
 
 .red_menu {
@@ -32,37 +35,38 @@ body {
     width: 100%;
     height: 150px;
     display: flex;
-    flex-direction: row;
     align-items:center;
     justify-content: space-around;
+    font-weight:bold;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+.marpad {
+    padding: 0px;
+    margin: 0px;
+}
+
+.padimg {
+    display: inline-block;
+    position: relative;
+    left: -10px;
+    top: 4px;
+
 }
 
 .rosdil {
-    padding: 0px;
+    display: inline-block;
+    font-size: small;
     margin: 0px;
-    cursor: pointer;
-}
-
-.ukr {
     padding: 0px;
-    margin: 0px;
-    cursor: pointer;
-}
-
-
-.zasnovnuk {
-    padding: 0px;
-    margin: 0px;
-    cursor: pointer;
 }
 
 .ukrrus {
     display: inline-block;
     padding-right: 12px;
-    padding-left: 0px;
     margin: 0px;
     font-size: small;
-    cursor: pointer;
 }
 
 .club {
@@ -72,51 +76,34 @@ body {
     padding-right: 12px;
     padding-top: 6px;
     padding-bottom: 6px;
-    margin: 0px;
+    margin-left: 20px;
     border: 3px solid white;
     border-radius: 20px;
     box-sizing: border-box;
-    cursor: pointer;
 }
 
 
 .club:hover { background: rgb(232,95,76); }
 .club:active { background: rgb(152,15,0); }
 
-
-p {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.p {
-    font-size: 8pt;
-    cursor: pointer;
-}
-
-.p2 {
-    font-size: 10pt;
-    cursor: pointer;
-}
-
-.p3 {
-    color: white;
-}
-
-.p4 {
-    color: white;
+.ukrpravda {
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
     text-align: center;
 }
 
-.p5 {
-    color: white;
+.zasnovnuk {
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     font-size: 12px;
 }
 
-.p6 {
-    color: white;
-    
+.cursor {
+    cursor: pointer;
 }
+
+.red {
+    color: rgb(119, 25, 25)
+}
+
+.red:hover { color: rgba(119, 25, 25, 0.692); }
