--- a/lesson 4/styles.css
+++ b/lesson 4/styles.css
@@ -51,13 +51,39 @@ body {
     display: inline-block;
     position: relative;
     left: -10px;
-    top: 4px;
+    top: 10px;
+    top: 50%;
+    left: 50%
+    transform: translate(-50%,-50%);
+}
 
+.padimg span {
+    position: relative;
+    width: 36px;
+    height: 4px;
+    background-color: white;
+    display: block;
+    margin-bottom: 8px;
+    transition: .5s;
+}
+
+.padimg span:nth-child(1) {
+    transform-origin: left;
+}
+
+.padimg span:nth-child(2) {
+    transform-origin: center;
+}
+
+.padimg span:nth-child(3) {
+    transform-origin: left;
 }
 
 .rosdil {
     display: inline-block;
+    position: relative;
     font-size: small;
+    bottom: 15px;
     margin: 0px;
     padding: 0px;
 }
